# alive-backdrops

./: colors.txt  package-lock.json  package.json  store.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/frontend/add_wallpaper/css/: add_wallpaper.css
src/frontend/add_wallpaper/html/: add_wallpaper.html
src/frontend/add_wallpaper/js/: back_next.js  drag_and_drop.js
src/frontend/add_wallpaper/styles/: add_wallpaper.css
src/frontend/general/localization/: localization.js
src/frontend/general/no_reload/: no_reload.js
src/frontend/general/store/: store.js
src/frontend/general/titlebar/css/: titlebar.css
src/frontend/general/titlebar/js/: titlebar.js
src/frontend/main/html/: main.html
src/frontend/main/scripts/: online_library.js  top_bar.js
src/frontend/main/styles/: main.css
src/frontend/settings/css/: settings.css
src/frontend/settings/html/: settings.html
src/frontend/settings/js/: back.js
src/frontend/wallpaper/css/: wallpaper.css
src/frontend/wallpaper/html/: wallpaper.html
src/frontend/wallpaper/js/: wallpaper.js
